exports[`test plurals:locales/de.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        other_one: other one de,
        other_value: other two de,
        value: value de,
        value_plural: values de
    },
    remove: {
    },
    replace: {
        book: book de,
        book_plural: books de,
        keep_one: one de,
        keep_two: two de
    }
}"
`;

exports[`test plurals:locales/en.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        other_one: other one en,
        other_value: other two en,
        value: value en,
        value_plural: values en
    },
    remove: {
    },
    replace: {
        book: book en,
        book_plural: books en,
        keep_one: one en,
        keep_two: two en
    }
}"
`;

exports[`test plurals:locales/ja.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick_0: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        other_value: other two en,
        value_0: values ja
    },
    remove: {
    },
    replace: {
        book_0: books en,
        keep_two: two en
    }
}"
`;

exports[`test plurals:locales/ru.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick_0: bricks en,
        brick_1: bricks en,
        brick_2: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        other_value: other two en,
        value_0: values ru 0,
        value_1: values ru 1,
        value_2: values ru 2
    },
    remove: {
    },
    replace: {
        book_0: books en,
        book_1: books en,
        book_2: books en,
        keep_two: two en
    }
}"
`;

exports[`test plurals:stderr.txt 1`] = `""`;

exports[`test plurals:stdout.txt 1`] = `
"Pushed keys to actual/locales/de.json: brick, brick_plural, not_plural_x, also_not_0_x
Removed keys from actual/locales/de.json: remove, remove_plural
Pushed keys to actual/locales/ja.json: book_0, keep_two, brick, brick_0, not_plural_x, also_not_0_x, value, other_value
Removed keys from actual/locales/ja.json: book_plural, keep_one, book, keep_two, brick, remove, remove_plural, other_one, other_value, value
Pushed keys to actual/locales/ru.json: book_0, book_1, book_2, keep_two, brick, brick_0, brick_1, brick_2, not_plural_x, also_not_0_x, value, other_value
Removed keys from actual/locales/ru.json: book_plural, keep_one, book, keep_two, brick, remove, remove_plural, other_one, other_value, value
"
`;
